//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  type USER_TYPE [not null, default: 'CLIENT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Client Client
}

Table Client {
  id String [pk]
  name String [not null]
  contact String [not null]
  address String [not null]
  status CLIENT_STATUS [not null, default: 'ACTIVE']
  userId String [unique, not null]
  user users [not null]
  order orders [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  name String [not null]
  description String [not null]
  price Decimal [not null]
  quantity Int [not null]
  orderProducts order_products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table orders {
  id String [pk]
  status ORDER_STATUS [not null, default: 'PENDING']
  totalPrice Decimal [not null]
  clientId String
  client Client
  orderProducts order_products [not null]
  orderedAt DateTime [default: `now()`, not null]
}

Table order_products {
  id String [pk]
  quantity Int [not null]
  unitPrice Decimal [not null]
  subtotal Decimal [not null]
  productId String [not null]
  product products [not null]
  orderId String [not null]
  order orders [not null]
}

Table sales_reports {
  id String [pk]
  beginDate DateTime [not null]
  endDate DateTime [not null]
  totalPrice Decimal [not null]
  productsQuantity Int [not null]
}

Enum USER_TYPE {
  ADMIN
  CLIENT
}

Enum CLIENT_STATUS {
  ACTIVE
  INACTIVE
}

Enum ORDER_STATUS {
  PENDING
  COMPLETED
}

Ref: Client.userId - users.id [delete: Cascade]

Ref: orders.clientId > Client.id [delete: Set Null]

Ref: order_products.productId > products.id [delete: Cascade]

Ref: order_products.orderId > orders.id [delete: Cascade]